--- a/README.org
+++ b/README.org
@@ -1,1 +1,20 @@
 * Freds Dotfiles
+This repository is exactly what you think it is.
+Should you be tempted to try these settings, proceed with caution.
+
+** Requirements
+The following software packages are required to run setup the dotfiles:
+- [[https://www.gnu.org/software/stow/manual/stow.html][stow]]
+- [[https://www.gnu.org/software/make/][make]]
+
+** Getting started
+To setup the dotfiles run
+
+#+begin_src bash
+  git clone https://github.com/FredBrockstedt/dotfiles.git
+  cd dotfiles
+  make
+#+end_src
+
+* License
+For further information on the terms and conditions of the license, please refer to the LICENSE file provided along side this project.
