--- a/README.org
+++ b/README.org
@@ -36,9 +36,9 @@ test stowing config files with
 Add the following configurations to the dot files
 
 - [X] z-shell config
-- [ ] tmux
+- [X] tmux
+- [X] git
 - [ ] mpv
-- [ ] git
 
 * License
 For further information on the terms and conditions of the license, please refer to the LICENSE file provided along side this project.
