--- a/README.org
+++ b/README.org
@@ -1,4 +1,6 @@
 * Freds Dotfiles
+![Maintained](https://img.shields.io/badge/Maintained-yes-green)
+
 This repository is exactly what you think it is.
 Should you be tempted to try these settings, proceed with caution.
 
